Fix #935 -- Text weight

--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -57,6 +57,9 @@
         font-size: inherit;
         margin: 0;
         line-height: inherit;
+        a {
+            font-weight: bold;
+        }
     }
     h5 {
         font-size: inherit;
