--- a/src/pretix/base/templates/404.html
+++ b/src/pretix/base/templates/404.html
@@ -2,11 +2,13 @@
 {% load i18n %}
 {% block title %}{% trans "Not found" %}{% endblock %}
 {% block content %}
-    <i class="fa fa-meh-o big-icon"></i>
-    <h1>{% trans "Not found" %}</h1>
-    <p>{% trans "I'm afraid we could not find the the resource you requested." %}</p>
-    <p>{{ exception }}</p>
-    <p class="links">
-        <a id='goback' href='#'>{% trans "Take a step back" %}</a>
-    </p>
+    <i class="fa fa-meh-o fa-fw big-icon"></i>
+    <div class="error-details">
+        <h1>{% trans "Not found" %}</h1>
+        <p>{% trans "I'm afraid we could not find the the resource you requested." %}</p>
+        <p>{{ exception }}</p>
+        <p class="links">
+            <a id='goback' href='#'>{% trans "Take a step back" %}</a>
+        </p>
+    </div>
 {% endblock %}
