--- a/src/pretix/base/templates/403.html
+++ b/src/pretix/base/templates/403.html
@@ -2,12 +2,14 @@
 {% load i18n %}
 {% block title %}{% trans "Permission denied" %}{% endblock %}
 {% block content %}
-    <i class="fa fa-lock big-icon"></i>
-    <h1>{% trans "Permission denied" %}</h1>
-    <p>{% trans "You do not have access to this page." %}</p>
-    <p>{{ exception }}</p>
-    <p class="links">
-        <a id='goback' href='#'>{% trans "Take a step back" %}</a>
-        &middot; <a id='reload' href='#'>{% trans "Try again" %}</a>
-    </p>
+    <i class="fa fa-fw fa-lock big-icon"></i>
+    <div class="error-details">
+        <h1>{% trans "Permission denied" %}</h1>
+        <p>{% trans "You do not have access to this page." %}</p>
+        <p>{{ exception }}</p>
+        <p class="links">
+            <a id='goback' href='#'>{% trans "Take a step back" %}</a>
+            &middot; <a id='reload' href='#'>{% trans "Try again" %}</a>
+        </p>
+    </div>
 {% endblock %}
