--- a/src/pretix/control/templates/pretixcontrol/event/mail_settings_fragment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail_settings_fragment.html
@@ -4,7 +4,10 @@
 <details class="panel panel-default">
     <summary class="panel-heading">
         <h4 class="panel-title">
-            <strong>{% trans title %}</strong>
+            <span>
+                {% trans "E-mail content:" %}
+                <strong>{% trans title %}</strong>
+            </span>
             <i class="fa fa-angle-down collapse-indicator"></i>
         </h4>
     </summary>
