--- a/src/pretix/control/templates/pretixcontrol/event/display.html
+++ b/src/pretix/control/templates/pretixcontrol/event/display.html
@@ -6,22 +6,30 @@
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
-        <fieldset>
-            <legend>{% trans "Event page" %}</legend>
-            {% bootstrap_field form.logo_image layout="control" %}
-            {% bootstrap_field form.frontpage_text layout="control" %}
-            {% bootstrap_field form.show_variations_expanded layout="control" %}
-            {% if form.frontpage_subevent_ordering %}
-                {% bootstrap_field form.frontpage_subevent_ordering layout="control" %}
-            {% endif %}
+        <fieldset class="panel panel-default">
+            <div class="panel-heading">
+                <legend>{% trans "Event page" %}</legend>
+            </div>
+            <div class="panel-body">
+                {% bootstrap_field form.logo_image layout="control" %}
+                {% bootstrap_field form.frontpage_text layout="control" %}
+                {% bootstrap_field form.show_variations_expanded layout="control" %}
+                {% if form.frontpage_subevent_ordering %}
+                    {% bootstrap_field form.frontpage_subevent_ordering layout="control" %}
+                {% endif %}
+            </div>
         </fieldset>
-        <fieldset>
-            <legend>{% trans "Shop design" %}</legend>
-            {% url "control:organizer.display" organizer=request.organizer.slug as org_url %}
-            {% propagated request.event org_url "primary_color" "primary_font" %}
-                {% bootstrap_field form.primary_color layout="control" %}
-                {% bootstrap_field form.primary_font layout="control" %}
-            {% endpropagated %}
+        <fieldset class="panel panel-default">
+            <div class="panel-heading">
+                <legend>{% trans "Shop design" %}</legend>
+            </div>
+            <div class="panel-body">
+                {% url "control:organizer.display" organizer=request.organizer.slug as org_url %}
+                {% propagated request.event org_url "primary_color" "primary_font" %}
+                    {% bootstrap_field form.primary_color layout="control" %}
+                    {% bootstrap_field form.primary_font layout="control" %}
+                {% endpropagated %}
+            </div>
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
